# rsp_py_c

./: README.md
ai_device/: CMakeLists.txt  ai_device
ai_device/include/: digital_disp.h  led.h  main.h  threadpool.h  tm1637.h
ai_device/src/: led.cpp  main.cpp  threadpool.cpp  tm1637.cpp
ai_device/test/: deepseek_api_chat_loop.py  demo  dht11.cpp  dht11.h  digital_disp.cpp  led_main.cpp  pwmtest.cpp
c_version/dht11/: demo  main.cpp
c_version/led/: demo  led.cpp
py_version/: tm1637.py
